#34 구글 자바 스타일 가이드 적용